packages/jsii/test/negatives/neg.method-name.1.ts
export class MyClass {
  public METHOD() {
    return 'hi';
  }
}
